--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,40 @@
-# PNPM artifacts
-.pnpm-store/               # move your store out of the repo entirely!
-.pnpm/                     # local PNPM cache
+# ─── PNPM artifacts ─────────────────────────────────────────────────────────────
+.pnpm-store/
+.pnpm/
 
-# Node modules
+pnpm-store/
+pnpm-store-lock.yaml
+
+# ─── Node / JavaScript modules ─────────────────────────────────────────────────
 node_modules/
 **/node_modules/
-apps/web/node_modules/
 
-# don’t commit giant videos
-# ignore all mp4s in “Background Videos” folder
-/apps/web/public/Background Videos/*
-
-# Next.js / Vercel builds
+# ─── Next.js & Vercel build outputs ─────────────────────────────────────────────
 .next/
+.out/
 .vercel/
-
-# Dev files
-.env*
-*.log
-.DS_Store
-
-# Supabase temp
-.supabase/
-.supabase-temp/
-.vercel
-/apps/web/public/Background Videos/
-/apps/web/public/Background Videos/
-
-# local package stores & build output
-node_modules/
-.pnpm-store/
-pnpm-store/
-.pnpm/
-.pnpm-store/
-pnpm-store/
-
-# Next.js / Vercel
 apps/web/.next/
 apps/web/.vercel/
-apps/web/node_modules/
-apps/web/.pnpm-store/
 
-# remove stray mirror folder
-Silo.git/
+# ─── Environment & debug files ──────────────────────────────────────────────────
+.env*
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.DS_Store
+
+# ─── Supabase temp & CLI artifacts ──────────────────────────────────────────────
+.supabase/
+.supabase-temp/
+
+# ─── Giant assets ───────────────────────────────────────────────────────────────
+# ignore the entire “Background Videos” folder (space escaped)
+apps/web/public/Background\ Videos/
+
+# ─── Optional: Lockfiles & caches ────────────────────────────────────────────────
+pnpm-workspace.yaml
+pnpm-lock.yaml
+# (keep these tracked, but you can ignore any stray caches)
+.pnpm-store/
