--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-intersection-observer": "^9.16.0",
-    "vercel": "^44.2.7",
-        "@dnd-kit/core": "^6.3.0",
+    "@dnd-kit/core": "^6.3.0",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^3.9.1",
@@ -46,6 +41,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@studio-freight/lenis": "^1.0.42",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -54,11 +50,15 @@
     "framer-motion": "^12.18.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "next": "15.3.4",
     "next-themes": "latest",
+    "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-day-picker": "8.10.1",
     "react-dnd": "^16.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "smooth-scrollbar": "^8.8.4",
@@ -66,6 +66,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
+    "vercel": "^44.2.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -74,11 +75,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6"
+    "typescript": "^5"
   }
 }
