--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,9 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^3.9.1",
+    "@monaco-editor/react": "^4.7.0",
+    "@nivo/core": "^0.99.0",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -43,30 +46,57 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@studio-freight/lenis": "^1.0.42",
     "@supabase/supabase-js": "^2.45.5",
+    "@tanstack/react-query": "^5.90.2",
+    "@visx/visx": "^3.12.0",
+    "archiver": "^7.0.1",
+    "axios": "^1.12.2",
+    "bullmq": "^5.58.9",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "compromise": "^14.14.4",
+    "csv-parser": "^3.2.0",
+    "d3": "^7.9.0",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.5.1",
+    "exceljs": "^4.4.0",
     "framer-motion": "^12.18.1",
+    "fuse.js": "^7.1.0",
     "input-otp": "1.4.1",
+    "ioredis": "^5.8.0",
+    "langchain": "^0.3.34",
     "lucide-react": "^0.454.0",
+    "mammoth": "^1.11.0",
+    "multer": "^2.0.2",
     "next": "15.3.4",
     "next-themes": "latest",
+    "node-cron": "^4.2.1",
+    "openai": "^5.23.0",
+    "pdf-parse": "^1.1.1",
+    "pdf2pic": "^3.2.0",
     "react": "^19.0.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-datepicker": "^8.7.0",
     "react-day-picker": "8.10.1",
     "react-dnd": "^16.0.0",
     "react-dom": "^19.0.0",
+    "react-flow": "^1.0.3",
+    "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.54.1",
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.10.2",
+    "react-window": "^2.1.1",
     "recharts": "2.15.0",
+    "sentiment": "^5.0.2",
+    "sharp": "^0.34.4",
     "smooth-scrollbar": "^8.8.4",
     "sonner": "^1.7.1",
     "svix": "^1.38.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^6.0.1",
     "vaul": "^0.9.6",
     "vercel": "^44.2.7",
     "zod": "^3.24.1"
@@ -74,12 +104,19 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/archiver": "^6.0.3",
+    "@types/cheerio": "^1.0.0",
+    "@types/d3": "^7.4.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^4",
     "typescript": "^5"
