--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-dialog": "1.1.4",
     "@radix-ui/react-dropdown-menu": "2.1.4",
     "@radix-ui/react-hover-card": "1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "2.1.1",
     "@radix-ui/react-menubar": "1.1.4",
     "@radix-ui/react-navigation-menu": "1.2.3",
@@ -44,9 +45,11 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@sentry/nextjs": "^10.15.0",
     "@studio-freight/lenis": "^1.0.42",
     "@supabase/supabase-js": "^2.45.5",
     "@tanstack/react-query": "^5.90.2",
+    "@vercel/analytics": "^1.5.0",
     "@visx/visx": "^3.12.0",
     "archiver": "^7.0.1",
     "axios": "^1.12.2",
@@ -61,8 +64,10 @@
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.5.1",
     "exceljs": "^4.4.0",
+    "express-rate-limit": "^8.1.0",
     "framer-motion": "^12.18.1",
     "fuse.js": "^7.1.0",
+    "helmet": "^8.1.0",
     "input-otp": "1.4.1",
     "ioredis": "^5.8.0",
     "langchain": "^0.3.34",
@@ -75,13 +80,14 @@
     "openai": "^5.23.0",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.2.0",
-    "react": "^19.0.0",
+    "react": "19",
     "react-beautiful-dnd": "^13.1.0",
     "react-datepicker": "^8.7.0",
     "react-day-picker": "8.10.1",
     "react-dnd": "^16.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "19",
     "react-flow": "^1.0.3",
+    "react-flow-renderer": "^10.3.17",
     "react-grid-layout": "^1.5.2",
     "react-hook-form": "^7.54.1",
     "react-intersection-observer": "^9.16.0",
@@ -95,6 +101,7 @@
     "sonner": "^1.7.1",
     "svix": "^1.38.0",
     "tailwind-merge": "^2.5.5",
+    "tailwind-variants": "^3.1.1",
     "tailwindcss-animate": "^1.0.7",
     "tesseract.js": "^6.0.1",
     "vaul": "^0.9.6",
@@ -118,7 +125,8 @@
     "eslint-config-next": "15.3.4",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.0.0",
+    "tsx": "^4.20.6",
+    "typescript": "5"
   }
 }
