--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -118,6 +118,7 @@
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.2",
