--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
 	"dependencies": {
 		"glob": "^11.0.3",
-		"java": "^0.16.1"
+		"java": "^0.16.1",
+		"openai": "^5.23.0"
+	},
+	"scripts": {
+		"ai": "tsx src/ai/orchestrator.ts",
+		"ai:ui": "pnpm ai ui",
+		"ai:backend": "pnpm ai backend",
+		"ai:data": "pnpm ai data",
+		"ai:tests": "pnpm ai tests",
+		"ai:infra": "pnpm ai infra",
+		"ai:compass": "pnpm ai compass",
+		"ai:aegis": "pnpm ai aegis",
+		"ai:lens": "pnpm ai lens",
+		"ai:vanta": "pnpm ai vanta",
+		"ai:dashboard": "pnpm ai dashboard"
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.55.1",
+		"playwright": "^1.55.1",
+		"tsx": "^4.20.6"
 	}
 }
