--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,27 @@
 {
-  "remote.WSL.enabled": true,
-  "remote.containers.showRebuildNotification": true,
+  "[typescript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "deno.enablePaths": [
+    "supabase/functions"
+  ],
+  "deno.lint": true,
+  "deno.unstable": [
+    "bare-node-builtins",
+    "byonm",
+    "sloppy-imports",
+    "unsafe-proto",
+    "webgpu",
+    "broadcast-channel",
+    "worker-options",
+    "cron",
+    "kv",
+    "ffi",
+    "fs",
+    "http",
+    "net"
+  ],
   "makefile.configureOnOpen": false,
+  "remote.WSL.enabled": true,
+  "remote.containers.showRebuildNotification": true
 }
