--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "turbo lint",
     "typecheck": "turbo typecheck",
     "test": "turbo test",
+    "test:e2e": "pnpm exec playwright test",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -21,6 +22,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tsx": "^4.20.6",
-    "turbo": "^2.3.3"
+    "turbo": "^2.3.3",
+    "@playwright/test": "^1.48.2"
   }
 }
